# gpsys

./: .dockerignore  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  deploy.yml
data/templates/: prefectural_capitals.json  stations.json
docker/api/: Dockerfile
docker/frontend/: Dockerfile  default.conf.template
docker/infer/: Dockerfile
docker/vacant_sync/: Dockerfile
docs/: README.md  api-reference.md  architecture.md  database-schema.md  deployment-guide.md  development-guide.md  vacant-property-feature.md
frontend/: README.md  contact.html  demo.html  faq.html  index.html  lists.html  maps.html  privacy.html  terms.html  vacant-search.js
migrations/: 001_init_schema.sql  002_admin_schema.sql  003_search_and_property_details.sql  004_places_search_results_embedding.sql  004_search_origin_queue.sql
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
tests/: test_admin_api.py  test_admin_auth.py  test_admin_places_search_api.py  test_admin_resources_api.py  test_admin_update_requests_api.py  test_api.py  test_consultation.py  test_e2e.py  test_encoding_compliance.py  test_infer_run_api.py  test_models.py  test_places_search.py  test_postgres_repository.py  test_postgres_vacant_property_repository.py  test_registration.py  test_repository.py  test_resource_management.py  test_search_history.py  test_storage.py  test_update_request.py  test_vacant_property.py  test_vacant_property_management.py  test_vacant_property_sync_job.py
(+69 files in other folders)
