[project]
name = "regional-revitalization-support-system"
version = "0.1.0"
description = "地方創生支援システム（アプリ本体サービス / 推論サービス）"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
]
postgres = [
    "asyncpg>=0.29.0",
]
gcs = [
    "google-cloud-storage>=2.16.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
